# models/kycModel.js
@@ -10,8 +10,48 @@ const KycSchema = new mongoose.Schema({
         townCity: {type: String, required: true},
         country:  {type: String, required: true},
     },
-    ownerOfProperty:{type: String, required: true},
-    managerOfProperty:{type: String, required: true},
+    ownerOfProperty:{
+        propertyOwner: { type: String, required: true, enum: ["individualEntity", "businessEntity"]},
+
+        individualEntity:{
+            firstName:{ type: String},
+            lastName:{ type: String},
+            dob:{ type: String}
+        },
+        businessEntity:{
+            fullNameOfBusinessEntity:{ type: String},
+            operationOfBusinessName: { type: String},
+            bnRc : { type: String},
+            addressOfBusinessEntity : { type: String},
+            unitNumberOfBusinessEntity : { type: Number},
+            cityOfBusinessEntity : { type: String},
+            zipCodeOfBusinessEntity : { type: Number},
+            countryOfBusinessEntity : { type: String},
+            firstNameOfBeneficialOwner: { type: String},
+            lastNameOfBeneficialOwner: { type: String},
+            dobOfBeneficialOwner: { type: String},
+        }
+
+    },
+    managerOfProperty:{
+        propertyManagerType: { type: String, required: true, enum: ["owner", "propertyManager", "managementCompany"]},
+
+        propertyManager:{
+            ManagerFullName:{ type: String},
+            ManagerDob:{ type: String}
+        },
+        ManagementCompany:{
+            fullNameOfManagementCompany:{ type: String},
+            addressOfManagementCompany : { type: String},
+            unitNumberOfManagementCompany : { type: Number},
+            cityOfManagementCompany : { type: String},
+            zipCodeOfManagementCompany : { type: Number},
+            countryOfManagementCompany : { type: String},
+            firstNameOfManagementCompany: { type: String},
+            lastNameOfManagementCompany: { type: String},
+            dobOfManagementCompany: { type: String},
+        }
+    },
 
 
     
